# librealsense

./: .travis.yml  CMakeLists.txt  appveyor.yml  readme.md
common/: model-views.cpp  model-views.h
examples/: CMakeLists.txt
examples/getting-started/: CMakeLists.txt  readme.md
examples/opencv/: CMakeLists.txt  readme.md  rs-opencv.cpp
src/media/: readme.md
tools/realsense_msg_generator/: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml
tools/realsense_msg_generator/msg/: ImuIntrinsic.msg  Notification.msg
unit-tests/: unit-tests-live.cpp
wrappers/python/: find_librs_version.py  readme.md  setup.py
wrappers/python/pyrealsense2/: __init__.py
