<package >
  <name>realsense_msgs</name>
  <version>1.12.4</version>
  <description>realsense_sdk</description>
  <maintainer email="realsense-sw@intel.com">Intel Realsense</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
